--- a/static/index.html
+++ b/static/index.html
@@ -13,14 +13,14 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 </head>
-
+<link href= "css/introHCI.css" rel="stylesheet">
 <body>
 	<div>
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1>Scott Klemmer</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1>Jing Lang</h1>
+			<p>Human-computer Interaction &middot; Computer Music &middot; Design</p>
 		</div>
 
 
@@ -31,7 +31,7 @@
 		<div id="project1">
 			<a href="project.html">
 				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
-				<p>Waiting in Line</p>
+				<p>An Optimal Way to Ride in Groups</p>
 			</a>
 		</div>
 		<div id="project2">
